--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "migrate": "node-pg-migrate"
   },
   "dependencies": {
+    "argon2": "^0.28.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "http-status": "^1.5.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "node-pg-migrate": "^6.0.0",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "uuid": "^8.3.2"
